--- a/setup.cfg
+++ b/setup.cfg
@@ -10,3 +10,6 @@ exclude =
 per-file-ignores =
     */settings.py:E501
 max-complexity = 10
+[isort]
+known_local_folder=posts,api,yatube_api # тут перечисляем локальные приложения
+sections=FUTURE,STDLIB,THIRDPARTY,LOCALFOLDER
